# CSRMatrix

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt  FindSPARSKIT.cmake
example/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  CSRMatr.hpp  MathVector.hpp  Matrix.hpp
src/: CMakeLists.txt  CSRMatr.cpp  MathVector.cpp  Matrix.cpp
